tests/NormalTests/paczka1/fuzzy1/44088827.err
Error in line 7: Ww8XJI9Yq A4@6 77,7
Error in line 1: Ww8XJI9Yq A426 69,4
Error in line 4: xgSL A426 73,6
Error in line 22: Ww8XJI9Yq A959 94,3
Error in line 11: sSfuy A959 22,8
